tests/ui/error-codes/E0225.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/E0225.rs:6:36
   |
LL |     let _: Box<dyn std::io::Read + std::io::Write>;
   |                    -------------   ^^^^^^^^^^^^^^ additional non-auto trait
   |                    |
   |                    first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: std::io::Read + std::io::Write {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/E0225.rs:8:20
   |
LL | trait Foo = std::io::Read + std::io::Write;
   |             -------------   -------------- additional non-auto trait
   |             |
   |             first non-auto trait
...
LL |     let _: Box<dyn Foo>;
   |                    ^^^
   |                    |
   |                    first non-auto trait comes from this alias
   |                    second non-auto trait comes from this alias
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: std::io::Read + std::io::Write {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0225`.
